# mt-kahypar

./: .gitignore  CMakeLists.txt  WINDOWS_BUILD.md  build_info.txt
.github/workflows/: windows_msvc.yml
cmake/modules/: gmock.cmake
include/: mtkahypartypes.h
lib/: CMakeLists.txt
mt-kahypar/application/: CMakeLists.txt
mt-kahypar/datastructures/: bitset.h  concurrent_flat_map.h  connectivity_set.h  delta_connectivity_set.h  fixed_vertex_support.h  partitioned_graph.h  static_bitset.h  thread_safe_fast_reset_flag_array.h
mt-kahypar/parallel/: atomic_wrapper.h  thread_management.cpp
mt-kahypar/partition/coarsening/: deterministic_multilevel_coarsener.cpp
mt-kahypar/partition/refinement/flows/: flow_hypergraph_builder.cpp  flow_hypergraph_builder.h  flow_refiner.h  parallel_construction.cpp
mt-kahypar/partition/refinement/fm/: fm_commons.cpp  global_rollback.cpp
mt-kahypar/partition/refinement/rebalancing/: advanced_rebalancer.cpp  advanced_rebalancer.h
mt-kahypar/utils/: atomic_ops.h  bit_ops.h  progress_bar.h
tests/: CMakeLists.txt
